--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="save"/>
+    <Button
+        android:id="@+id/btn_initViewModel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="init"/>
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
